[project]
name = "tree-nation-visits"
version = "0.1.0"
description = "FastAPI service that converts customer shop visits into planted tree counters."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.migrations" = ["script.py.mako"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
